--- a/app/index.html
+++ b/app/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="icon.png" />
+    <link rel="icon" type="image/svg+xml" href="Procrash_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Procrash : Dashboard</title>
     <link
     href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
     rel="stylesheet"
   />
-    <script type="module" crossorigin src="index-CpwXbXcf.js"></script>
+    <script type="module" crossorigin src="index-oixPWNX7.js"></script>
     <link rel="stylesheet" crossorigin href="index-B_SY1GJM.css">
   </head>
   <body>
